--- a/src/app/pages/main-page/main-page.page.html
+++ b/src/app/pages/main-page/main-page.page.html
@@ -11,7 +11,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content [fullscreen]="true" [scrollY]="false" >
 
   <div class="top-div-search">
 
