--- a/src/app/pages/start/start.page.html
+++ b/src/app/pages/start/start.page.html
@@ -1,6 +1,6 @@
 
-<ion-content [fullscreen]="true" >
-  <app-supplier-card></app-supplier-card>
+<ion-content class="ion-padding" [fullscreen]="true" [scrollY]="false">
+
     <div class="start-content" >
 
       <div class="select-language">
