--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
               Main Menu
             </h1>
           </ion-item>
-          <ion-item detail="false" (click)="navigateToUrl('account-profile/:accountId')">
+          <ion-item detail="false" (click)="navigateToUrl(currentAccountUrl!)">
             <ion-label>
               <ion-text color="primary">
                 Account Profile
@@ -39,7 +39,7 @@
             </ion-label>
           </ion-item>
           
-          <ion-item detail="false" >
+          <ion-item detail="false" (click)="navigateToUrl(productListUrl!)">
             <ion-label>
               <ion-text color="primary">
                 Product List
@@ -47,7 +47,7 @@
             </ion-label>
           </ion-item>
   
-          <ion-item detail="false"  >
+          <ion-item detail="false"  (click)="navigateToUrl(offerListUrl!)">
             <ion-label>
               <ion-text color="primary">
                 Offer List
