--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,7 +6,7 @@
     <ion-title>Log In</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content [fullscreen]="true" >
+<ion-content class="ion-padding" >
   <div class="login-content">
     
     <form class="login-form" id="loginFormId"  #loginForm="ngForm" (ngSubmit)="onSubmit()">
