--- a/src/app/components/supplier-card/supplier-card.component.html
+++ b/src/app/components/supplier-card/supplier-card.component.html
@@ -2,12 +2,19 @@
 <div class="supplier-card-container">
   <div class="supplier-card-header">
     <div class="supplier-card-logo">
-         logo
+         <img class="logo-supplier" [src]="currentAccount!.account_logo" />
     </div>
     <div class="supplier-card-info">
-      <ion-text class="supplier-card-info-center-content">
-        info
-      </ion-text>
+      <div class="supplier-card-info-rows">
+        <ion-text class="supplier-card-info-center-content">
+          {{currentAccount!.account_name}}
+        </ion-text>
+        <ion-text class="supplier-card-info-center-content">
+          <rating-view [rating]="4.4"></rating-view>
+          <rating-view [rating]="currentAccount!.rating"></rating-view>
+          <input-rating [rating]="rating" (ratingChange)="ratingChange($event)"></input-rating> 
+        </ion-text>
+      </div>
     </div>
     <div class="supplier-card-options">
        option
