--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,6 +14,7 @@
         <ion-tab-button tab="{{cartPage}}" (click)="this.titleHomePage='app_menu.shopping_cart'">
           <ion-icon name="cart-outline"></ion-icon>
           <ion-label> {{ 'app_menu.shopping_cart' | translate }} </ion-label>
+          <ion-badge color="primary">22k</ion-badge>
         </ion-tab-button>
     
         <ion-tab-button tab="{{suppliersPage}}" (click)="this.titleHomePage='app_menu.suppliers'">
