--- a/src/app/pages/suppliers-page/suppliers-page.page.html
+++ b/src/app/pages/suppliers-page/suppliers-page.page.html
@@ -12,6 +12,10 @@
 </ion-header>
 
 <ion-content class="ion-padding" [fullscreen]="true" >
-  <app-supplier-card (click)="supplierClicked()"></app-supplier-card>
-
+  @for(sup of suppliers ; track sup.account_name){
+     <app-supplier-card 
+             [supplier]="sup"  
+             (click)="supplierClicked(sup.id)" >
+     </app-supplier-card>
+  }
 </ion-content>
