--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,3 +2,11 @@
     height:calc(100vh - 44px);
     overflow: hidden;
 }
+
+ion-badge {
+    background: purple;
+    color: white;
+    font-size: 14px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
