--- a/src/global.scss
+++ b/src/global.scss
@@ -229,10 +229,10 @@ ion-modal {
     
    }
 
-  .price-ignore{
-    text-decoration: line-through;
-  }
+}
 
+.price-ignore{
+  text-decoration: line-through;
 }
 
 .main-menu {
@@ -286,3 +286,132 @@ ion-modal {
   }
 } 
 
+
+// product card
+
+.row-center-img {
+  position: relative;
+  margin: 0 auto;
+  height: 38vh;
+  width: fit-content;
+}
+
+
+.img-product {
+  height: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+.product-discount{
+  background: rgb(63, 232, 63);
+  color: #041733;
+  padding-top:2px;
+  font-size: x-small;
+  width: 33px;
+  height: 15px;
+  position: absolute;
+  top: 1px;
+  right: 5px;
+  text-align: center;
+  border-radius: 25px;
+  z-index: 2;
+}
+
+.ion-col-center {
+  color: #1455c5;
+  text-align: center;
+}
+
+
+.one-margin-padding {
+  margin: 3px;
+  padding: 1px;
+}
+
+// hide loading control
+/*
+ion-loading.custom-loading {
+  .loading-wrapper {
+    background: transparent !important;
+    box-shadow: none !important;
+  }
+}
+*/
+.loading-wrapper {
+  visibility: hidden;
+}
+
+.loading-spinner {
+  visibility: visible;
+
+}
+ion-spinner{
+  --spinner-color: #0b073e;  //red 
+  transform: scale(1);  //increase the size of spinner
+}
+
+// account as supplier styles
+.supplier-card-container {
+  background-color: #ffffff;
+  width: 100%;
+  height: 300px;
+  margin: 1px;
+  border: 1px solid black ;
+}
+
+.supplier-card-header{
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: center;
+  height : 40%;
+}
+
+.supplier-card-logo {
+  margin: 1px;
+  width: 25%;
+  height: 100%;
+}
+
+.supplier-logo{
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  border: 3px white solid;
+  border-radius: 15%;
+  overflow: hidden;
+  box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+  transform: translatey(0px);
+  object-fit: cover;
+  z-index: 2;
+}
+
+.supplier-card-info {
+  display: flex;
+  justify-content : flex-start;
+  align-items:center;
+  width: 45%;
+  height: 100%;
+}
+
+.supplier-card-info-rows {
+  display: flex;
+  flex-direction: column;
+  justify-content : center;
+  align-items:center;
+  width: 100%;
+}
+
+.supplier-card-info-center-content {
+ margin: 10px  10px ;
+ width:100%;
+}
+
+.supplier-card-options {
+  margin: 1px;
+  width: 30%;
+  height: 100%;
+  border: 1px solid black ;
+}
