--- a/src/app/pages/account-profile/account-profile.page.scss
+++ b/src/app/pages/account-profile/account-profile.page.scss
@@ -81,3 +81,10 @@
 		transform: translatey(0px);
 	}
    }
+
+   .hor-scroll{
+        width: 100%;
+        height: 50px;
+        overflow-x: auto !important;
+        overflow-y: hidden;
+   }
