--- a/src/app/components/order-card/order-card.component.html
+++ b/src/app/components/order-card/order-card.component.html
@@ -141,9 +141,12 @@
     }
   
       <ion-row class="ion-justify-content-between">
-        <ion-col size="7" class="ion-no-padding">   {{ order!.seller_name }}  </ion-col>
-        <ion-col size="5" class="ion-no-padding"> 
-          <ion-button color="danger" fill="outline" (click)=" deleteOrder()" > {{'order.deleteorder' | translate}} </ion-button>  
+        <ion-col size="8" class="ion-no-padding">   {{ order!.seller_name }}  </ion-col>
+        <ion-col size="2" class="ion-no-padding"> 
+          <ion-button color="danger" fill="outline" (click)="deleteOrder()" > {{'order.deleteorder' | translate}} </ion-button>  
+        </ion-col>
+        <ion-col size="2" class="ion-no-padding"> 
+          <ion-button color="success" fill="outline" (click)="updateOrder()" > {{'order.confirm' | translate}} </ion-button>  
         </ion-col>
       </ion-row>
 
