--- a/src/app/pages/account-profile/account-profile.page.html
+++ b/src/app/pages/account-profile/account-profile.page.html
@@ -107,21 +107,82 @@
               color="secondary"
             ></ion-input>
           </ion-col>
-        </ion-row>    
+        </ion-row>  
+
+
+        @if (currentAccountPayment) {
+          <ng-container 
+            *ngTemplateOutlet="paymentTypeInput">
+          </ng-container>
+        }
+    
+        <ng-template #paymentTypeInput >
+          <ion-row>
+            <ion-col class="ion-no-padding">
+              <account-payment-input 
+                       [enableType]="enablePaymentType"
+                       [paymentTypes]="paymentTypesFiltered"  
+                       [accountPayment]="currentAccountPayment!" 
+                       (updateAccountPayment)="updatePaymentMethod($event)"
+                       (cancelUpdate)="cancelUpdate()">
+              </account-payment-input>
+            </ion-col>
+          </ion-row>
+        </ng-template>
+
+                
+        @if (!currentAccountPayment) {
+          <ng-container 
+            *ngTemplateOutlet="paymentTypesList">
+          </ng-container>
+        }
+    
+        <ng-template #paymentTypesList >
+          <ion-row>
+            <ion-col class="ion-no-padding">
+              <ion-list [inset]="true" >
+                <ion-item [button]="true" class="ion-border"  (click)="addPayment()">
+                  <ion-text color="primary"> <span>+</span> {{'account.addpaymentmethod' | translate}} </ion-text>
+                </ion-item>
+              </ion-list>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col  class="ion-no-padding" >
+              <div class="hor-scroll">
+                @for(payment of accountOption.paymentTypes ; track payment.paymentId){
+                  <ion-chip color="primary" (click)="viewDetail(payment)">
+                    <ion-icon name="cash-outline" color="success"></ion-icon>
+                    <ion-label>{{ getPaymentName(payment.paymentId) | translate }}</ion-label>
+                  </ion-chip>
+                }
+              </div>
+              <!--
+              <ion-segment [scrollable]="true">
+                @for(payment of accountOption.paymentTypes ; track payment.paymentId){
+                  <ion-segment-button value="payment">
+                    
+                  </ion-segment-button>
+                }
+              </ion-segment>
+              -->
+            </ion-col>
+          </ion-row>
+        </ng-template>
             
-            <ion-row>
-              <ion-col>
-                <ion-button [disabled]="!accountOptionFrm.valid"
-                            type="submit" 
-                            color="secondary" 
-                            expand="block"
-                            translate="account.submit"
-                            class="submit-button">
-                     @if(isLoading) {<ion-spinner class="spinner-button"></ion-spinner>}
-                </ion-button>
-              </ion-col>
-            </ion-row>
-          </form>
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-button [disabled]="!accountOptionFrm.valid"
+                        type="submit" 
+                        color="secondary" 
+                        expand="block"
+                        translate="account.submit"
+                        class="submit-button">
+                  @if(isLoading) {<ion-spinner class="spinner-button"></ion-spinner>}
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </form>
 
 
   </ion-grid>
