--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,15 @@
               </ion-text>
             </ion-label>
           </ion-item>
+
+          <ion-item detail="false"  (click)="navigateToUrl(offerListUrl!)">
+            <ion-label>
+              <ion-text color="primary">
+                Offer List
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          
         </ion-menu-toggle>
       </ion-list>
 
